# MinimalPlugin

./: CMakeLists.txt  MinimalPlugin.cpp  MinimalPlugin.h  README.md  testPlugin.cpp  testPlugin.h  testPlugin.info
